# adr

./: .gitignore  .pkg  CLA.md  CMakeLists.txt  CMakePresets.json  LICENSE  categories.html  dl.py  gen.py  package.sh  places.html
.github/workflows/: build.yml  deploy.yml  release.yml
exe/: contains.cc  extract.cc  reverse.cc  server.cc  taskflow.cc  typeahead.cc
include/adr/: adr.h  area_database.h  area_set.h  bitmask.h  cache.h  categories.h  cista_read.h  crypto.h  formatter.h  guess_context.h  import_context.h  json.h  ngram.h  normalize.h  parse_get_parameters.h  request.h  reverse.h  score.h  sift4.h  trace.h  trigram.h  typeahead.h  types.h  url_decode.h
src/: area_database.cc  area_set.cc  crypto.cc  extract.cc  formatter.cc  get_suggestions.cc  guess_context.cc  json.cc  print_stats.cc  read.cc  request.cc  reverse.cc  typeahead.cc
test/: crypto_test.cc  cyrillic_test.cc  formatter_test.cc  iv.txt  key.txt  main.cc  parse_get_parameter_test.cc  simple_test.cc  test_dir.h.in  url_decode.cc
